--- a/thesis.tex
+++ b/thesis.tex
@@ -136,9 +136,12 @@ unicode=true,
 	% začátek textu  
 	\mainbodystarts
 
-\chapter{Introduction}
-
-% TODO - napsat bakalarku
+\include{chapters/chap01}
+\include{chapters/chap02}
+\include{chapters/chap03}
+\include{chapters/chap04}
+\include{chapters/chap05}
+\include{chapters/chap06}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%% 
 % Seznam literatury je v samostatnem souboru reference.bib. Ten
