Finished expected volume section.

--- a/reference.bib
+++ b/reference.bib
@@ -1,7 +1,7 @@
-@online{WinNT,
-  author = {MultiMedia LLC},
-  title = {{MS Windows NT} Kernel Description},
-  year = 2015,
+@online{GzipBenchmark,
+  author = {Lasse Collin},
+  title = {A Quick Benchmark: Gzip vs. Bzip2 vs. LZMA},
+  year = 2005,
   url = {https://web.archive.org/web/20150907021223/http://tukaani.org/lzma/benchmarks.html},
-  urldate = {2010-09-07}
+  urldate = {2015-09-07}
 }
