Created nomenclature files. Corrected some typos. Added ROOT reference.

--- a/thesis.tex
+++ b/thesis.tex
@@ -44,6 +44,7 @@ unicode=true,
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % příkazy šablony
 \makenomenclature								% při překladu zajistí vytvoření pracovního souboru se seznamem zkratek
+\include{nomenclature}
 
 \let\oldUrl\url									% url adresy budou zobrazeny: <url> 
 \renewcommand\url[1]{<\texttt{\oldUrl{#1}}>}
