--- a/reference.bib
+++ b/reference.bib
@@ -5,3 +5,19 @@
   url = {https://web.archive.org/web/20150907021223/http://tukaani.org/lzma/benchmarks.html},
   urldate = {2015-09-07}
 }
+
+@article{Brun199781,
+title = "\{ROOT\} — An object oriented data analysis framework ",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
+volume = "389",
+number = "1–2",
+pages = "81 - 86",
+year = "1997",
+note = "New Computing Techniques in Physics Research V ",
+issn = "0168-9002",
+doi = "http://dx.doi.org/10.1016/S0168-9002(97)00048-X",
+url = "http://www.sciencedirect.com/science/article/pii/S016890029700048X",
+author = "Rene Brun and Fons Rademakers",
+abstract = "The \{ROOT\} system in an Object Oriented framework for large scale data analysis. \{ROOT\} written in C++, contains, among others, an efficient hierarchical \{OO\} database, a C++ interpreter, advanced statistical analysis (multi-dimensional histogramming, fitting, minimization, cluster finding algorithms) and visualization tools. The user interacts with \{ROOT\} via a graphical user interface, the command line or batch scripts. The command and scripting language is C++ (using the interpreter) and large scripts can be compiled and dynamically linked in. The \{OO\} database design has been optimized for parallel access (reading as well as writing) by multiple processes. "
+}
+
