--- a/thesis.tex
+++ b/thesis.tex
@@ -1,12 +1,14 @@
 \documentclass[11pt,twoside,a4paper]{book}  
 % definice dokumentu
-\usepackage[czech, english]{babel}
+\usepackage[english]{babel}
 \usepackage[T1]{fontenc} 				% pouzije EC fonty 
 \usepackage[utf8]{inputenc} 			% utf8 kódování vstupu 
 \usepackage[square, numbers]{natbib}	% sazba pouzite literatury
-\usepackage{indentfirst} 				% 1. odstavec jako v cestine, pro práci v aj možno zakomentovat
+%\usepackage{indentfirst} 				% 1. odstavec jako v cestine, pro práci v aj možno zakomentovat
 \usepackage{fancyhdr}					% tisk hlaviček a patiček stránek
 \usepackage{nomencl} 					% umožňuje snadno definovat zkratky a jejich seznam
+\usepackage{tikz}						% TeX obrazky
+\usetikzlibrary{trees,calc}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % informace o práci
