--- a/nomenclature.tex
+++ b/nomenclature.tex
@@ -17,7 +17,7 @@
 \nomenclature	{MPX}		{Medipix, a semiconductor pixel detection chip.}
 
 % Computer Science Abbreviations
-\nomenclature	{UNIX}		{}
+\nomenclature	{UNIX}		{A family of computer operating systems.}
 \nomenclature	{HTTP}		{Hypertext Transfer Protocol.}
 \nomenclature	{SMB}		{Server Message Block (also known as the Common Internet File System), a network protocol mainly used for providing shared access to files.}
 \nomenclature	{CIFS}		{Common Internet File System. See SMB.}
@@ -25,3 +25,4 @@
 \nomenclature	{AFP}		{Apple Filing Protocol, a network protocol mainly used for providing shared access to files on clients and servers compatible with operating systems developed by Apple Computer, Inc.}
 \nomenclature	{FTP}		{File Transfer Protocol, a network protocol mainly used for providing shared access to files.}
 \nomenclature	{API}		{Application programming interface, a set of routines, protocols and tools for building software and applications.}
+\nomenclature	{SQL}		{Structured Query Language, a language designed to define, manage and query data in a relational database system.}
