--- a/thesis.tex
+++ b/thesis.tex
@@ -8,7 +8,7 @@
 \usepackage{fancyhdr}					% tisk hlaviček a patiček stránek
 \usepackage{nomencl} 					% umožňuje snadno definovat zkratky a jejich seznam
 \usepackage{tikz}						% TeX obrazky
-\usetikzlibrary{trees,calc}
+\usetikzlibrary{trees,calc,positioning,shapes.geometric,matrix,arrows,decorations.pathreplacing,arrows.meta,decorations.markings,math}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % informace o práci
