Finalized file formats. Added 2007 valgrind article.

--- a/reference.bib
+++ b/reference.bib
@@ -21,3 +21,13 @@ author = "Rene Brun and Fons Rademakers",
 abstract = "The \{ROOT\} system in an Object Oriented framework for large scale data analysis. \{ROOT\} written in C++, contains, among others, an efficient hierarchical \{OO\} database, a C++ interpreter, advanced statistical analysis (multi-dimensional histogramming, fitting, minimization, cluster finding algorithms) and visualization tools. The user interacts with \{ROOT\} via a graphical user interface, the command line or batch scripts. The command and scripting language is C++ (using the interpreter) and large scripts can be compiled and dynamically linked in. The \{OO\} database design has been optimized for parallel access (reading as well as writing) by multiple processes. "
 }
 
+@inproceedings{nethercote2007valgrind,
+  title={Valgrind: a framework for heavyweight dynamic binary instrumentation},
+  author={Nethercote, Nicholas and Seward, Julian},
+  booktitle={ACM Sigplan notices},
+  volume={42},
+  number={6},
+  pages={89--100},
+  year={2007},
+  organization={ACM}
+}
