--- a/reference.bib
+++ b/reference.bib
@@ -7,18 +7,18 @@
 }
 
 @article{Brun199781,
-title = "\{ROOT\} — An object oriented data analysis framework ",
-journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
-volume = "389",
-number = "1–2",
-pages = "81 - 86",
-year = "1997",
-note = "New Computing Techniques in Physics Research V ",
-issn = "0168-9002",
-doi = "http://dx.doi.org/10.1016/S0168-9002(97)00048-X",
-url = "http://www.sciencedirect.com/science/article/pii/S016890029700048X",
-author = "Rene Brun and Fons Rademakers",
-abstract = "The \{ROOT\} system in an Object Oriented framework for large scale data analysis. \{ROOT\} written in C++, contains, among others, an efficient hierarchical \{OO\} database, a C++ interpreter, advanced statistical analysis (multi-dimensional histogramming, fitting, minimization, cluster finding algorithms) and visualization tools. The user interacts with \{ROOT\} via a graphical user interface, the command line or batch scripts. The command and scripting language is C++ (using the interpreter) and large scripts can be compiled and dynamically linked in. The \{OO\} database design has been optimized for parallel access (reading as well as writing) by multiple processes. "
+  title = "\{ROOT\} — An object oriented data analysis framework ",
+  journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
+  volume = "389",
+  number = "1–2",
+  pages = "81 - 86",
+  year = "1997",
+  note = "New Computing Techniques in Physics Research V ",
+  issn = "0168-9002",
+  doi = "http://dx.doi.org/10.1016/S0168-9002(97)00048-X",
+  url = "http://www.sciencedirect.com/science/article/pii/S016890029700048X",
+  author = "Rene Brun and Fons Rademakers",
+  abstract = "The \{ROOT\} system in an Object Oriented framework for large scale data analysis. \{ROOT\} written in C++, contains, among others, an efficient hierarchical \{OO\} database, a C++ interpreter, advanced statistical analysis (multi-dimensional histogramming, fitting, minimization, cluster finding algorithms) and visualization tools. The user interacts with \{ROOT\} via a graphical user interface, the command line or batch scripts. The command and scripting language is C++ (using the interpreter) and large scripts can be compiled and dynamically linked in. The \{OO\} database design has been optimized for parallel access (reading as well as writing) by multiple processes. "
 }
 
 @inproceedings{nethercote2007valgrind,
@@ -30,4 +30,33 @@ abstract = "The \{ROOT\} system in an Object Oriented framework for large scale 
   pages={89--100},
   year={2007},
   organization={ACM}
+}
+
+@article{Vykydal200935,
+  title = "The Medipix2-based network for measurement of spectral characteristics and composition of radiation in \{ATLAS\} detector ",
+  journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
+  volume = "607",
+  number = "1",
+  pages = "35 - 37",
+  year = "2009",
+  note = "Radiation Imaging Detectors 2008Proceedings of the 10th International Workshop on Radiation Imaging Detectors ",
+  issn = "0168-9002",
+  doi = "http://dx.doi.org/10.1016/j.nima.2009.03.104",
+  url = "http://www.sciencedirect.com/science/article/pii/S0168900209005956",
+  author = "Z. Vykydal and J. Bouchami and M. Campbell and Z. Dolezal and M. Fiederle and D. Greiffenberg and A. Gutierrez and E. Heijne and T. Holy and J. Idarraga and J. Jakubek and V. Kral and M. Kralik and C. Lebel and C. Leroy and X. Llopart and D. Maneuski and M. Nessi and V. O’Shea and M. Platkevic and S. Pospisil and M. Suk and L. Tlustos and P. Vichoudis and J. Visschers and I. Wilhelm and J. Zemlicka",
+  keywords = "Pixel detectors",
+  keywords = "Medipix",
+  keywords = "Atlas",
+  keywords = "Radiation fields",
+  keywords = "Fast neutrons",
+  keywords = "Slow neutrons ",
+  abstract = "The \{ATLAS\} detector is now installed at the \{CERN\} \{LHC\} and a precise evaluation of the radiation environment within and around the detector is required to understand the performance of the various detector systems, and to predict their useful lifetime. Furthermore, validation of earlier Monte Carlo predictions about the radiation field in \{ATLAS\} is necessary. In particular, it is important to perform these measurements in the early phases of the \{LHC\} operation. Many other radiation measuring devices lack sensitivity to low doses, and usually do not provide information on the composition of the radiation during this low intensity period. A network of 15 ATLAS-MPX devices has been installed at various positions in the \{ATLAS\} detector. These devices are capable of providing quantitative real-time information on the fluxes and flux distributions of the main radiation types in the experiment, including slow and fast neutrons. The technical description of the ATLAS-MPX detector network as well as the principles of the data analysis is presented. "
+}
+
+@MastersThesis{TurecekThesis2011,
+  author = {Daniel Turecek},
+  title = {{Software for Radiation Detectors Medipix}},
+  school = {Czech Technical University in Prague},
+  address = {Czech Republic},
+  year = {2011},
 }
