Finalized introduction to chapter 3.

--- a/nomenclature.tex
+++ b/nomenclature.tex
@@ -26,3 +26,6 @@
 \nomenclature	{FTP}		{File Transfer Protocol, a network protocol mainly used for providing shared access to files.}
 \nomenclature	{API}		{Application programming interface, a set of routines, protocols and tools for building software and applications.}
 \nomenclature	{SQL}		{Structured Query Language, a language designed to define, manage and query data in a relational database system.}
+\nomenclature	{REST}		{TODO}
+\nomenclature	{RTAP}		{TODO}
+
