--- a/appendix_creation_scripts.tex
+++ b/appendix_creation_scripts.tex
@@ -1,12 +1,30 @@
 \chapter{Database Creation Scripts}
 In this appendix, we include several PostgreSQL scripts used to create the index database.
 
-\lstinputlisting[language=SQL,caption={Definition of user access roles necessary to read and modify the database.},label={lst:sql-sensors}]{code/security.sql}
-
-\lstinputlisting[language=SQL,caption={Definition of the \textit{sensors} table.},label={lst:sql-sensors}]{code/sensors.sql}
+\newpage
+\begin{listing}[H]
+	\inputsql{code/security.sql}
+    \caption{Definition of user access roles necessary to read and modify the database.}
+    \label{lst:sql-security}
+\end{listing}
 
 \newpage
-\lstinputlisting[language=SQL,caption={Definition of the \textit{rootfiles} table.},label={lst:sql-rootfiles}]{code/rootfiles.sql}
+\begin{listing}[H]
+	\inputsql{code/sensors.sql}
+    \caption{Definition of the \textit{sensors} table.}
+    \label{lst:sql-sensors}
+\end{listing}
 
 \newpage
-\lstinputlisting[language=SQL,caption={Definition of the \textit{frames} table.},label={lst:sql-frames}]{code/frames.sql}
+\begin{listing}[H]
+	\inputsql{code/rootfiles.sql}
+    \caption{Definition of the \textit{rootfiles} table.}
+    \label{lst:sql-rootfiles}
+\end{listing}
+
+\newpage
+\begin{listing}[H]
+	\inputsql{code/frames.sql}
+    \caption{Definition of the \textit{frames} table.}
+    \label{lst:sql-frames}
+\end{listing}
