--- a/nomenclature.tex
+++ b/nomenclature.tex
@@ -26,6 +26,10 @@
 \nomenclature	{FTP}		{File Transfer Protocol, a network protocol mainly used for providing shared access to files.}
 \nomenclature	{API}		{Application programming interface, a set of routines, protocols and tools for building software and applications.}
 \nomenclature	{SQL}		{Structured Query Language, a language designed to define, manage and query data in a relational database system.}
-\nomenclature	{REST}		{TODO}
-\nomenclature	{RTAP}		{TODO}
+\nomenclature	{JSTP}		{JSON Timepix Protocol, a protocol used to transmit captured frames to the web visualization UI. For its description, see section \ref{protocol:introduction}.}
+\nomenclature	{RPC}		{}
+\nomenclature	{JSON}		{}
+\nomenclature	{MIME}		{}
+\nomenclature	{URI}		{}
+\nomenclature	{URL}		{}
 
