Moved a lot from chapter 3 in the appendix. Added some references and text around them.

--- a/thesis.tex
+++ b/thesis.tex
@@ -203,7 +203,8 @@ unicode=true,
 % vše co následuje bude uvedeno v přílohách
 \appendix
 
-\include{appendix_creation_scripts}
+\include{chapters/appendix_creation_scripts}
+\include{chapters/appendix_jstp}
 
 \printnomenclature
 \label{apx:zkratky}
