Finalized chapter 3, added neat UML thingy.

--- a/reference.bib
+++ b/reference.bib
@@ -60,3 +60,12 @@
   address = {Czech Republic},
   year = {2011},
 }
+
+@rfc{HTTP1999,
+ author = {Fielding, R. and Gettys, J. and Mogul, J. and Frystyk, H. and Masinter, L. and Leach, P. and Berners-Lee, T.},
+ title = {Hypertext Transfer Protocol -- HTTP/1.1},
+ year = {1999},
+ publisher = {RFC Editor},
+ address = {United States},
+} 
+
