--- a/thesis.tex
+++ b/thesis.tex
@@ -43,8 +43,9 @@ unicode=true,
 \usepackage{algpseudocode} 		%slouží pro výpis pseudokódu
 \usepackage{tikz}		        %TeX obrázky
 \usetikzlibrary{trees,calc,positioning,shapes.geometric,matrix,arrows,decorations.pathreplacing,arrows.meta,decorations.markings,math}
-\usepackage{inconsolata}			%pro monospace font
-\usepackage{xcolor}
+\usepackage{inconsolata}		%hezký monospace font
+\usepackage{xcolor}				%barvičky
+\usepackage{pgf-umlsd}			%UML sekvence
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % příkazy šablony
@@ -135,7 +136,8 @@ unicode=true,
  
 	\abstractpage
 
-	Translation of Czech abstract into English.
+	% Translation of Czech abstract into English.
+	TODO
 
 	% Prace v cestine musi krome abstraktu v anglictine obsahovat i
 	% abstrakt v cestine.
@@ -145,10 +147,11 @@ unicode=true,
 	\vskip 2.75\baselineskip
 
 	\noindent
-	Abstrakt práce by měl velmi stručně vystihovat její obsah. Tedy čím se práce zabývá a co je jejím výsledkem/přínosem.
+	TODO
+	% Abstrakt práce by měl velmi stručně vystihovat její obsah. Tedy čím se práce zabývá a co je jejím výsledkem/přínosem.
 
-	\noindent
-	Očekávají se cca 1 -- 2 odstavce, maximálně půl stránky.
+	% \noindent
+	% Očekávají se cca 1 -- 2 odstavce, maximálně půl stránky.
 
 	%%%%%%%%%%%%%%%%%%%%%%%%%%    
 	% obsahy a seznamy
