Added acquisition diagram.

--- a/thesis.tex
+++ b/thesis.tex
@@ -38,6 +38,7 @@ unicode=true,
 
 % rozšiřující importy
 \usepackage{caption}			%popisy
+\usepackage{subcaption}			%popisy (členité)
 \usepackage[newfloat]{minted}             %lepší zdrojové kódy
 \usepackage{algorithmicx} 		%slouží pro zápis algoritmů
 \usepackage{algpseudocode} 		%slouží pro výpis pseudokódu
@@ -46,6 +47,7 @@ unicode=true,
 \usepackage{inconsolata}		%hezký monospace font
 \usepackage{xcolor}				%barvičky
 \usepackage{pgf-umlsd}			%UML sekvence
+\usepackage{tikz-timing}		%časové grafy
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % příkazy šablony
