Added list of listings.

--- a/thesis.tex
+++ b/thesis.tex
@@ -161,7 +161,8 @@ unicode=true,
 
 	% pokud v práci nejsou obrázky nebo tabulky - odstraňte jejich seznam
 	\listoffigures			% Obsah / Table of Contents 
-	\listoftables			% Seznam tabulek / List of Tables
+	\listoflistings 		% Seznam úryvků kódu
+	%\listoftables			% Seznam tabulek / List of Tables
 
 	%%%%%%%%%%%%%%%%%%%%%%%%%% 
 	% začátek textu  
