Restructured section on Timepix data output based on Benedikt's recommendations.

--- a/nomenclature.tex
+++ b/nomenclature.tex
@@ -15,6 +15,7 @@
 \nomenclature	{TOT}		{Time of Threshold acquisition mode. For more information, see section~\ref{tpx:tot}.}
 \nomenclature	{TPX}		{Timepix, a semiconductor pixel detection chip successing Medipix2.}
 \nomenclature	{MPX}		{Medipix, a semiconductor pixel detection chip.}
+\nomenclature	{ASIC}		{}
 
 % Computer Science Abbreviations
 \nomenclature	{UNIX}		{A family of computer operating systems.}
