Squashed two chapters together. Implemented few sections on object design.

--- a/nomenclature.tex
+++ b/nomenclature.tex
@@ -40,4 +40,7 @@
 \nomenclature	{OS}		{}
 \nomenclature	{DOM}		{}
 \nomenclature	{SAX}		{}
+\nomenclature	{HTML}		{}
+\nomenclature	{CSS}		{}
+\nomenclature	{LESS}		{}
 
