Finished the section on plotting optimizations.

--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,12 @@
+@online{HtmlStandard,
+  author = {},
+  key = {The Web Hypertext Application Technology Working Group},
+  title = {HTML: A Living Standard},
+  year = 2016,
+  url = {https://web.archive.org/web/20160304140644/https://html.spec.whatwg.org/},
+  urldate = {2016-03-04}
+}
+
 @online{GzipBenchmark,
   author = {Lasse Collin},
   title = {A Quick Benchmark: Gzip vs. Bzip2 vs. LZMA},
