--- a/nomenclature.tex
+++ b/nomenclature.tex
@@ -9,6 +9,7 @@
 \nomenclature	{SLS}		{}
 \nomenclature	{DCS}		{Detector Control Systems, a system providing control of subdetectors and of common infrastructure of the experiment and communication with the services of CERN.}
 \nomenclature	{EOS}		{A primary storage system at CERN for LHC experiments.}
+\nomenclature	{IEAP}		{}
 
 % Timepix Abbreviations
 \nomenclature	{TOA}		{Time of Arrival acquisition mode. For more information, see section~\ref{tpx:toa}.}
