Finished working on the introduction. Only edits will follow now. (hopefully)

--- a/nomenclature.tex
+++ b/nomenclature.tex
@@ -9,14 +9,15 @@
 \nomenclature	{SLS}		{}
 \nomenclature	{DCS}		{Detector Control Systems, a system providing control of subdetectors and of common infrastructure of the experiment and communication with the services of CERN.}
 \nomenclature	{EOS}		{A primary storage system at CERN for LHC experiments.}
-\nomenclature	{IEAP}		{}
+\nomenclature	{IEAP}		{Institute of Experimental and Applied Physics (Czech name: \textit{Ústav technické a experimentální fyziky}), based in Prague, Czech Republic.}
+\nomenclature	{CTU}		{Czech Technical University (Czech name: \textit{České vysoké učení technické}), based in Prague, Czech Republic.}
 
 % Timepix Abbreviations
 \nomenclature	{TOA}		{Time of Arrival acquisition mode. For more information, see section~\ref{tpx:toa}.}
 \nomenclature	{TOT}		{Time of Threshold acquisition mode. For more information, see section~\ref{tpx:tot}.}
 \nomenclature	{TPX}		{Timepix, a semiconductor pixel detection chip successing Medipix2.}
 \nomenclature	{MPX}		{Medipix, a semiconductor pixel detection chip.}
-\nomenclature	{ASIC}		{}
+\nomenclature	{ASIC}		{Application-specific integrated circuit.}
 
 % Computer Science Abbreviations
 \nomenclature	{UNIX}		{A family of computer operating systems.}
