Revised list of abbreviations.

--- a/nomenclature.tex
+++ b/nomenclature.tex
@@ -6,18 +6,17 @@
 \nomenclature	{LHC}		{Large Hadron Collider, an experimental factility built by CERN.}
 \nomenclature	{LS}		{Long Shutdown, a period in CERN time schedule characteristic by temporary cesation of operation of particle accelerators and increased maintenance.}
 \nomenclature	{ROOT}		{An object oriented data analysis framework. \cite{Brun199781}}
-\nomenclature	{SLS}		{}
 \nomenclature	{DCS}		{Detector Control Systems, a system providing control of subdetectors and of common infrastructure of the experiment and communication with the services of CERN.}
 \nomenclature	{EOS}		{A primary storage system at CERN for LHC experiments.}
 \nomenclature	{IEAP}		{Institute of Experimental and Applied Physics (Czech name: \textit{Ústav technické a experimentální fyziky}), based in Prague, Czech Republic.}
 \nomenclature	{CTU}		{Czech Technical University (Czech name: \textit{České vysoké učení technické}), based in Prague, Czech Republic.}
 
 % Timepix Abbreviations
-\nomenclature	{TOA}		{Time of Arrival acquisition mode. For more information, see section~\ref{tpx:toa}.}
-\nomenclature	{TOT}		{Time of Threshold acquisition mode. For more information, see section~\ref{tpx:tot}.}
+\nomenclature	{TOA}		{Time of Arrival operation mode. For more information, see section~\ref{tpx:toa}.}
+\nomenclature	{TOT}		{Time of Threshold operation mode. For more information, see section~\ref{tpx:tot}.}
 \nomenclature	{TPX}		{Timepix, a semiconductor pixel detection chip successing Medipix2.}
 \nomenclature	{MPX}		{Medipix, a semiconductor pixel detection chip.}
-\nomenclature	{ASIC}		{Application-specific integrated circuit.}
+\nomenclature	{ASIC}		{Application-specific Integrated Circuit.}
 
 % Computer Science Abbreviations
 \nomenclature	{UNIX}		{A family of computer operating systems.}
@@ -27,24 +26,24 @@
 \nomenclature	{SSH}		{Secure Shell, a cryptographic network protocol commonly used for remote command-line access and remote command execution.}
 \nomenclature	{AFP}		{Apple Filing Protocol, a network protocol mainly used for providing shared access to files on clients and servers compatible with operating systems developed by Apple Computer, Inc.}
 \nomenclature	{FTP}		{File Transfer Protocol, a network protocol mainly used for providing shared access to files.}
-\nomenclature	{API}		{Application programming interface, a set of routines, protocols and tools for building software and applications.}
+\nomenclature	{API}		{Application Programming Interface, a set of routines, protocols and tools for building software and applications.}
 \nomenclature	{SQL}		{Structured Query Language, a language designed to define, manage and query data in a relational database system.}
 \nomenclature	{JSTP}		{JSON Timepix Protocol, a protocol used to transmit captured frames to the web visualization UI. For its description, see section \ref{protocol:introduction}.}
-\nomenclature	{RPC}		{}
-\nomenclature	{JSON}		{}
-\nomenclature	{MIME}		{}
-\nomenclature	{URI}		{}
-\nomenclature	{URL}		{}
-\nomenclature	{UTC}		{}
-\nomenclature	{UI}		{}
-\nomenclature	{CRUD}		{}
-\nomenclature	{CPU}		{}
-\nomenclature	{OS}		{}
-\nomenclature	{DOM}		{}
-\nomenclature	{SAX}		{}
-\nomenclature	{HTML}		{}
-\nomenclature	{CSS}		{}
-\nomenclature	{LESS}		{}
-\nomenclature	{XML}		{}
-\nomenclature	{DPI}		{}
+\nomenclature	{RPC}		{Remote Procedure Call, a mechanism used to execute computer subroutines on machines over a network.}
+\nomenclature	{JSON}		{JavaScript Object Notation, a data format derived from JavaScript.}
+\nomenclature	{MIME}		{A two-part file format identifier.}
+\nomenclature	{URI}		{Uniform Resource Identifier, a string of characters used to identify a resource.}
+\nomenclature	{URL}		{Uniform Resource Locator, commonly known as web address.}
+\nomenclature	{UTC}		{Coordinated Universal Time, a primary worldwide standard used to regulate clocks and time.}
+\nomenclature	{UI}		{User Interface.}
+\nomenclature	{CRUD}		{Create, Read, Update, Delete, four basic operations of persistent storage system.}
+\nomenclature	{CPU}		{Central Processing Unit.}
+\nomenclature	{OS}		{Operating System.}
+\nomenclature	{DOM}		{Document Object Model, a family of XML parsers which generate a tree structure in memory from parsed content.}
+\nomenclature	{SAX}		{Simple API for XML, a family of XML parsers which generate various events while processing content sequentially.}
+\nomenclature	{HTML}		{Hypertext Markup Language, a standard markup language used to create web pages. \cite{HtmlStandard}}
+\nomenclature	{CSS}		{Cascading Style Sheets, a language used to describe presentation of web pages.}
+\nomenclature	{LESS}		{A dynamic style sheet language which can be compiled into CSS.}
+\nomenclature	{XML}		{Extensible Markup Language, a standard markup language.}
+\nomenclature	{DPI}		{Dots per Inch, a measure of screen pixel resolution.}
 
